# phntm_bridge_client

./: CMakeLists.txt  Dockerfile  README.md  compile_commands.json  package.xml
.github/: .editorconfig
.github/workflows/: build-docker-image.yml  push-docker-image.yml  test-build.yml  test-docker-build.yml
include/phntm_bridge/: config.hpp  const.hpp  extra_packages.hpp  ffmpeg_encoder.hpp  file_extractor.hpp  git.hpp  h264_prepacketizer.hpp  introspection.hpp  lib.hpp  phntm_bridge.hpp  sio.hpp  status_leds.hpp  topic_reader_data.hpp  topic_reader_h264.hpp  topic_writer_data.hpp  wrtc_peer.hpp
launch/: bridge_agent_launch.py  bridge_launch.py  client_agent_launch.py  client_launch.py
sioclient/: sio_client.cpp  sio_client.h  sio_socket.cpp  sio_socket.h
sioclient/internal/: sio_client_impl.cpp  sio_client_impl.h
src/: config.cpp  const.cpp  extra_packages.cpp  ffmpeg_encoder.cpp  file_extractor.cpp  generic_actions.cpp  generic_services.cpp  git.cpp  h264_prepacketizer.cpp  introspection.cpp  lib.cpp  local_services.cpp  phntm_bridge.cpp  services.cpp  sio.cpp  status_leds.cpp  topic_reader_data.cpp  topic_reader_h264.cpp  topic_writer_data.cpp  wrtc_peer.cpp
